todo/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - image: gitea.michaelthomson.dev/mthomson/go-todos-app:latest
        name: todo
        ports:
        - name: http
          containerPort: 3000
