todo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: todo
spec:
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: http
    name: http
