todo/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: todo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: todo.michaelthomson.dev
    http:
      paths:
      - path: /
        backend:
          service:
            name: todo
            port: 
              name: http
  tls:
    - hosts:
        - todo.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
